cloudformation/cluster.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Create ECS Task

Parameters:
  VpcId: # 受け取る値を定義する
    Type: AWS::SSM::Parameter::Value<AWS::EC2::VPC::Id>
    Default: /odekakekun-values/VPCId

  #ECSCluster
  ECSClusterName:
    Type: String
    Default: "odekakekun-cluster"

  # LogGroup
  ECSLogGroupName:
    Type: String
    Default: "/ecs/logs/ecs-group"

Resources:
  ########################################################
  ### ECS Cluster
  ########################################################
  ECSCluster:
    Type: "AWS::ECS::Cluster"
    Properties:
      ClusterName: !Ref ECSClusterName

  ########################################################
  ###  ECS LogGroup
  ########################################################
  ECSLogGroup:
    Type: "AWS::Logs::LogGroup"
    Properties:
      LogGroupName: !Ref ECSLogGroupName

  ########################################################
  ### Security Group for ECS Service
  ########################################################
  ECSSecurityGroupId:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS Service Security Group
      VpcId: !Ref VpcId
      GroupName: ecs-service-security-group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 10.1.10.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 10.1.20.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 10.1.100.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 10.1.200.0/24
        # privateサブネット間はpingで通信確認できるようにしておく
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.1.100.0/24
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.1.200.0/24

  ########################################################
  ###  ECS Task Execution Role
  ########################################################
  ECSTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: "ECSTaskExecutionRolePolicy"
      Path: /
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        # AWS側でデフォルトでついているものを利用する
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  EcsExecRolePolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: Ecs-exec-role
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - "ssmmessages:CreateControlChannel"
              - "ssmmessages:CreateDataChannel"
              - "ssmmessages:OpenControlChannel"
              - "ssmmessages:OpenDataChannel"
              - "ssm:GetParameters"
              - "secretsmanager:GetSecretValue"
              - "kms:Decrypt"
            Resource: "*"
      Roles:
        - Ref: ECSTaskExecutionRole

  # ------------------------------------------------------------#
  #  Parameter Store
  # ------------------------------------------------------------#
  # 渡す値をParameter Storeに保存する
  SSMECSCluster:
    Type: AWS::SSM::Parameter
    Properties:
      Name: /odekakekun-values/ECSCluster
      Type: String
      Value: !Ref "ECSCluster"

  SSMECSTaskExecutionRole:
    Type: AWS::SSM::Parameter
    Properties:
      Name: /odekakekun-values/ECSTaskExecutionRole
      Type: String
      Value: !Ref "ECSTaskExecutionRole"

  SSMECSLogGroup:
    Type: AWS::SSM::Parameter
    Properties:
      Name: /odekakekun-values/ECSLogGroup
      Type: String
      Value: !Ref "ECSLogGroup"

  SSMECSSecurityGroupId:
    Type: AWS::SSM::Parameter
    Properties:
      Name: /odekakekun-values/ECSSecurityGroupId
      Type: String
      Value: !Ref "ECSSecurityGroupId"
